--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
           </div>
       </ul>
       <p appBasicHightlight >style me with basic highlight directive</p>
-      <p appBetterHightlight > style me with better highlight directive</p>
+      <p [appBetterHightlight]="'red'" defaultColor='yellow'  > style me with better highlight directive</p>
       <!-- <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template> -->
