--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,24 @@
       </ul>
       <p appBasicHightlight >style me with basic highlight directive</p>
       <p [appBetterHightlight]="'red'" defaultColor='yellow'  > style me with better highlight directive</p>
-      <!-- <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
+      <!-- <ng-template [ngIf]="!onlyOdd">
+        <div>
+          <li
+          class="list-group-item"
+          [ngClass]=" { odd : even % 2 !==0} "
+          [ngStyle]="{ backgroundColor : even % 2 !==0 ? 'yellow' : 'transparent'}"
+          *ngFor="let even of evens">{{even}}
+          </li>
+        </div>
       </ng-template> -->
+      <div  *appUnless="!onlyOdd">
+        <li
+        class="list-group-item"
+        [ngClass]=" { odd : even % 2 !==0} "
+        [ngStyle]="{ backgroundColor : even % 2 !==0 ? 'yellow' : 'transparent'}"
+        *ngFor="let even of evens">{{even}}
+        </li>
+      </div>
     </div>
   </div>
 </div>
