--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,13 +36,19 @@
           </li>
         </div>
       </ng-template> -->
-      <div  *appUnless="!onlyOdd">
+      <div  *appUnless="onlyOdd">
         <li
         class="list-group-item"
         [ngClass]=" { odd : even % 2 !==0} "
         [ngStyle]="{ backgroundColor : even % 2 !==0 ? 'yellow' : 'transparent'}"
         *ngFor="let even of evens">{{even}}
         </li>
+      </div>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5" >Value is 5 </p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault>Value is default</p>
       </div>
     </div>
   </div>
